--- a/Proyecto/DacodesJobs/templates/panel/index.html
+++ b/Proyecto/DacodesJobs/templates/panel/index.html
@@ -38,7 +38,6 @@
       <div id="page-content-wrapper">
         {% include "partials/PanelNav.html" %}
 
-
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
               <li class="breadcrumb-item text-capitalize" aria-current="page"><a href="#">Inicio</a></li>
@@ -56,7 +55,327 @@
               </div>
               <div class="card-body">
                 {% block card-body %}
+                  <main class="content">
+                    <div class="container-fluid">
+                      <div class="header text-center">
+                        <h1 class="header-title">
+                          Welcome back, NOMBRE DE USUARIO!
+                        </h1>
+                  		  <p class="header-subtitle">You have 24 new messages and 5 new notifications.</p>
+                      </div>
 
+                      <div class="row mb-3">
+                        <div class="col-xl-7">
+                          <div class="card flex-fill w-100">
+                            <div class="card-header">
+                              <div class="card-actions float-right">
+                								<a href="#" class="mr-1">
+                                  <i class="align-middle" data-feather="refresh-cw"></i>
+                                </a>
+                								<div class="d-inline-block dropdown show">
+                									<a href="#" data-toggle="dropdown" data-display="static">
+                                    <i class="align-middle" data-feather="more-vertical">Opciones</i>
+                                  </a>
+
+                									<div class="dropdown-menu dropdown-menu-right">
+                										<a class="dropdown-item" href="#">Action</a>
+                										<a class="dropdown-item" href="#">Another action</a>
+                										<a class="dropdown-item" href="#">Something else here</a>
+                									</div>
+                								</div>
+                							</div>
+                              <h5 class="card-title mb-0">Recent Movement</h5>
+                            </div><!--Card header--->
+                            <div class="card-body py-3">
+                              <div class="chart chart-sm">
+                                <canvas id="chartjs-dashboard-line"></canvas>
+                              </div>
+                            </div><!--Card body--->
+                          </div><!--Card--->
+                        </div><!--Col--->
+
+                				<div class="col-xl-5 d-flex">
+                					<div class="w-100">
+                						<div class="row">
+                							<div class="col-sm-6">
+                								<div class="card flex-fill bg-primary text-white mb-3">
+                									<div class="card-body py-2">
+                                    <h6 class="card-title text-white mb-4">Empleados</h6>
+                										<div class="row no-gutters">
+                											<div class="col-4 align-self-center text-left">
+                												<div class="icon icon-primary">
+                													<i class="align-middle fa fa-user-tie fa-4x"></i>
+                												</div>
+                											</div>
+                											<div class="col-8 align-self-center text-right">
+                												<h2 class="text-white">2562</h2>
+                											</div>
+                										</div>
+                									</div>
+                								</div>
+                							</div>
+                							<div class="col-sm-6">
+                                <div class="card flex-fill bg-success text-white mb-3">
+                									<div class="card-body py-2">
+                                    <h6 class="card-title text-white mb-4">Candidatos</h6>
+                										<div class="row no-gutters">
+                											<div class="col-4 align-self-center text-left">
+                												<div class="icon icon-primary">
+                													<i class="align-middle fa fa-user-graduate fa-4x"></i>
+                												</div>
+                											</div>
+                											<div class="col-8 align-self-center text-right">
+                												<h2 class="text-white">2562</h2>
+                											</div>
+                										</div>
+                									</div>
+                								</div>
+                							</div>
+                						</div>
+                					</div>
+                				</div>
+                  		</div>
+
+                  			<div class="row mb-3">
+                  				<div class="col-12 col-md-6 col-xxl-3 d-flex order-1 order-xxl-1">
+                  					<div class="card flex-fill">
+                  						<div class="card-header">
+                  							<div class="card-actions float-right">
+                  								<a href="#" class="mr-1">
+                          <i class="align-middle" data-feather="refresh-cw"></i>
+                        </a>
+                  								<div class="d-inline-block dropdown show">
+                  									<a href="#" data-toggle="dropdown" data-display="static">
+                            <i class="align-middle" data-feather="more-vertical"></i>
+                          </a>
+
+                  									<div class="dropdown-menu dropdown-menu-right">
+                  										<a class="dropdown-item" href="#">Action</a>
+                  										<a class="dropdown-item" href="#">Another action</a>
+                  										<a class="dropdown-item" href="#">Something else here</a>
+                  									</div>
+                  								</div>
+                  							</div>
+                  							<h5 class="card-title mb-0">Calendar</h5>
+                  						</div>
+                  						<div class="card-body d-flex">
+                  							<div class="align-self-center w-100">
+                  								<div class="chart">
+                  									<div id="datetimepicker-dashboard"></div>
+                  								</div>
+                  							</div>
+                  						</div>
+                  					</div>
+                  				</div>
+                  				<div class="col-12 col-md-12 col-xxl-6 d-flex order-3 order-xxl-2">
+                  					<div class="card flex-fill w-100">
+                  						<div class="card-header">
+                  							<div class="card-actions float-right">
+                  								<a href="#" class="mr-1">
+                          <i class="align-middle" data-feather="refresh-cw"></i>
+                        </a>
+                  								<div class="d-inline-block dropdown show">
+                  									<a href="#" data-toggle="dropdown" data-display="static">
+                            <i class="align-middle" data-feather="more-vertical"></i>
+                          </a>
+
+                  									<div class="dropdown-menu dropdown-menu-right">
+                  										<a class="dropdown-item" href="#">Action</a>
+                  										<a class="dropdown-item" href="#">Another action</a>
+                  										<a class="dropdown-item" href="#">Something else here</a>
+                  									</div>
+                  								</div>
+                  							</div>
+                  							<h5 class="card-title mb-0">Current Visitors</h5>
+                  						</div>
+                  						<div class="card-body px-4">
+                  							<div id="world_map" style="height:350px;"></div>
+                  						</div>
+                  					</div>
+                  				</div>
+                  				<div class="col-12 col-md-6 col-xxl-3 d-flex order-2 order-xxl-3">
+                  					<div class="card flex-fill w-100">
+                  						<div class="card-header">
+                  							<div class="card-actions float-right">
+                  								<a href="#" class="mr-1">
+                          <i class="align-middle" data-feather="refresh-cw"></i>
+                        </a>
+                  								<div class="d-inline-block dropdown show">
+                  									<a href="#" data-toggle="dropdown" data-display="static">
+                            <i class="align-middle" data-feather="more-vertical"></i>
+                          </a>
+
+                  									<div class="dropdown-menu dropdown-menu-right">
+                  										<a class="dropdown-item" href="#">Action</a>
+                  										<a class="dropdown-item" href="#">Another action</a>
+                  										<a class="dropdown-item" href="#">Something else here</a>
+                  									</div>
+                  								</div>
+                  							</div>
+                  							<h5 class="card-title mb-0">Browser Usage</h5>
+                  						</div>
+                  						<div class="card-body d-flex">
+                  							<div class="align-self-center w-100">
+                  								<div class="py-3">
+                  									<div class="chart chart-xs">
+                  										<canvas id="chartjs-dashboard-pie"></canvas>
+                  									</div>
+                  								</div>
+
+                  								<table class="table mb-0">
+                  									<tbody>
+                  										<tr>
+                  											<td><i class="fas fa-square-full text-primary"></i> Chrome</td>
+                  											<td class="text-right">4401</td>
+                  										</tr>
+                  										<tr>
+                  											<td><i class="fas fa-square-full text-warning"></i> Firefox</td>
+                  											<td class="text-right">4003</td>
+                  										</tr>
+                  										<tr>
+                  											<td><i class="fas fa-square-full text-danger"></i> IE</td>
+                  											<td class="text-right">1589</td>
+                  										</tr>
+                  									</tbody>
+                  								</table>
+                  							</div>
+                  						</div>
+                  					</div>
+                  				</div>
+                  			</div>
+
+                  			<div class="row mb-3">
+                  				<div class="col-12 col-lg-8 col-xxl-9 d-flex">
+                  					<div class="card flex-fill">
+                  						<div class="card-header">
+                  							<div class="card-actions float-right">
+                  								<a href="#" class="mr-1">
+                          <i class="align-middle" data-feather="refresh-cw"></i>
+                        </a>
+                  								<div class="d-inline-block dropdown show">
+                  									<a href="#" data-toggle="dropdown" data-display="static">
+                            <i class="align-middle" data-feather="more-vertical"></i>
+                          </a>
+
+                  									<div class="dropdown-menu dropdown-menu-right">
+                  										<a class="dropdown-item" href="#">Action</a>
+                  										<a class="dropdown-item" href="#">Another action</a>
+                  										<a class="dropdown-item" href="#">Something else here</a>
+                  									</div>
+                  								</div>
+                  							</div>
+                  							<h5 class="card-title mb-0">Top Selling Products</h5>
+                  						</div>
+                  						<table id="datatables-dashboard" class="table table-striped my-0">
+                  							<thead>
+                  								<tr>
+                  									<th>Name</th>
+                  									<th class="d-none d-xl-table-cell">License</th>
+                  									<th class="d-none d-xl-table-cell">Technology</th>
+                  									<th class="d-none d-xl-table-cell">Tickets</th>
+                  									<th>Sales</th>
+                  								</tr>
+                  							</thead>
+                  							<tbody>
+                  								<tr>
+                  									<td>AppStack</td>
+                  									<td class="d-none d-xl-table-cell">Single license</td>
+                  									<td><span class="badge badge-success">HTML</span></td>
+                  									<td class="d-none d-xl-table-cell">50</td>
+                  									<td class="d-none d-xl-table-cell">720</td>
+                  								</tr>
+                  								<tr>
+                  									<td>Spark</td>
+                  									<td class="d-none d-xl-table-cell">Single license</td>
+                  									<td><span class="badge badge-danger">Angular</span></td>
+                  									<td class="d-none d-xl-table-cell">20</td>
+                  									<td class="d-none d-xl-table-cell">540</td>
+                  								</tr>
+                  								<tr>
+                  									<td>Milo</td>
+                  									<td class="d-none d-xl-table-cell">Single license</td>
+                  									<td><span class="badge badge-warning">React</span></td>
+                  									<td class="d-none d-xl-table-cell">40</td>
+                  									<td class="d-none d-xl-table-cell">280</td>
+                  								</tr>
+                  								<tr>
+                  									<td>Ada</td>
+                  									<td class="d-none d-xl-table-cell">Single license</td>
+                  									<td><span class="badge badge-info">Vue</span></td>
+                  									<td class="d-none d-xl-table-cell">60</td>
+                  									<td class="d-none d-xl-table-cell">610</td>
+                  								</tr>
+                  								<tr>
+                  									<td>Abel</td>
+                  									<td class="d-none d-xl-table-cell">Single license</td>
+                  									<td><span class="badge badge-danger">Angular</span></td>
+                  									<td class="d-none d-xl-table-cell">80</td>
+                  									<td class="d-none d-xl-table-cell">150</td>
+                  								</tr>
+                  								<tr>
+                  									<td>Spark</td>
+                  									<td class="d-none d-xl-table-cell">Single license</td>
+                  									<td><span class="badge badge-success">HTML</span></td>
+                  									<td class="d-none d-xl-table-cell">20</td>
+                  									<td class="d-none d-xl-table-cell">480</td>
+                  								</tr>
+                  								<tr>
+                  									<td>Libre</td>
+                  									<td class="d-none d-xl-table-cell">Single license</td>
+                  									<td><span class="badge badge-warning">React</span></td>
+                  									<td class="d-none d-xl-table-cell">30</td>
+                  									<td class="d-none d-xl-table-cell">280</td>
+                  								</tr>
+                  								<tr>
+                  									<td>Von</td>
+                  									<td class="d-none d-xl-table-cell">Single license</td>
+                  									<td><span class="badge badge-danger">Angular</span></td>
+                  									<td class="d-none d-xl-table-cell">50</td>
+                  									<td class="d-none d-xl-table-cell">350</td>
+                  								</tr>
+                  								<tr>
+                  									<td>Material Blog</td>
+                  									<td class="d-none d-xl-table-cell">Single license</td>
+                  									<td><span class="badge badge-info">Vue</span></td>
+                  									<td class="d-none d-xl-table-cell">10</td>
+                  									<td class="d-none d-xl-table-cell">480</td>
+                  								</tr>
+                  							</tbody>
+                  						</table>
+                  					</div>
+                  				</div>
+                  				<div class="col-12 col-lg-4 col-xxl-3 d-flex">
+                  					<div class="card flex-fill w-100">
+                  						<div class="card-header">
+                  							<div class="card-actions float-right">
+                  								<a href="#" class="mr-1">
+                          <i class="align-middle" data-feather="refresh-cw"></i>
+                        </a>
+                  								<div class="d-inline-block dropdown show">
+                  									<a href="#" data-toggle="dropdown" data-display="static">
+                            <i class="align-middle" data-feather="more-vertical"></i>
+                          </a>
+
+                  									<div class="dropdown-menu dropdown-menu-right">
+                  										<a class="dropdown-item" href="#">Action</a>
+                  										<a class="dropdown-item" href="#">Another action</a>
+                  										<a class="dropdown-item" href="#">Something else here</a>
+                  									</div>
+                  								</div>
+                  							</div>
+                  							<h5 class="card-title mb-0">Monthly Sales</h5>
+                  						</div>
+                  						<div class="card-body d-flex w-100">
+                  							<div class="align-self-center chart chart-lg">
+                  								<canvas id="chartjs-dashboard-bar"></canvas>
+                  							</div>
+                  						</div>
+                  					</div>
+                  				</div>
+                  			</div>
+
+                      </div>
+                  </main>
                 {% endblock card-body %}
               </div>
             </div>
