--- a/Proyecto/DacodesJobs/templates/partials/sidebar.html
+++ b/Proyecto/DacodesJobs/templates/partials/sidebar.html
@@ -6,22 +6,22 @@
   </a>
 </div>
 <div class="list-group list-group-flush bg-dark">
-  <a class="list-group-item list-group-item-action bg-dark text-light" href="{% url 'Panel:PanelIndex' %}">
+  <a class="list-group-item list-group-item-action bg-dark text-light" href="{% url 'Panel:Index' %}">
       <i class="fa fa-home text-info"></i> Inicio
   </a>
 
- <strong class="list-group-item bg-dark text-light text-uppercase">Configuraciones</strong>
+ <strong class="list-group-item bg-dark text-light text-uppercase"><i class="fa fa-filter"></i> Opciones</strong>
 
-  <a class="list-group-item list-group-item-action bg-dark text-light" href="{% url 'Panel:PanelAreasListar' %}">
+  <a class="list-group-item list-group-item-action bg-dark text-light" href="{% url 'Panel:AreasListar' %}">
       <i class="fa fa-network-wired text-info"></i> Areas de Trabajo
   </a>
   <a class="list-group-item list-group-item-action bg-dark text-light" href="">
       <i class="fa fa-building text-info"></i> Datos de la empresa
   </a>
-  <a class="list-group-item list-group-item-action bg-dark text-light" href="{% url 'Panel:PanelEmpleadosListar' %}">
+  <a class="list-group-item list-group-item-action bg-dark text-light" href="{% url 'Panel:EmpleadosListar' %}">
       <i class="fa fa-users text-info"></i> Empleados
   </a>
-  <a class="list-group-item list-group-item-action bg-dark text-light" href="{% url 'Panel:PanelPuestosListar' %}">
+  <a class="list-group-item list-group-item-action bg-dark text-light" href="{% url 'Panel:PuestosListar' %}">
       <i class="fa fa-id-card text-info"></i> Puestos Vacantes
   </a>
 
