--- a/Proyecto/DacodesJobs/templates/panel/AreasTrabajo/formulario.html
+++ b/Proyecto/DacodesJobs/templates/panel/AreasTrabajo/formulario.html
@@ -3,7 +3,7 @@
 {% block titulo %} Areas de trabajo {% endblock titulo %}
 
 {% block breadcrumb %}
-  <li class="breadcrumb-item text-capitalize" aria-current="page"><a href="{% url 'Panel:PanelAreasListar' %}">Areas de Trabajo</a></li>
+  <li class="breadcrumb-item text-capitalize" aria-current="page"><a href="{% url 'Panel:AreasListar' %}">Areas de Trabajo</a></li>
   {% if object %}
     <li class="breadcrumb-item text-capitalize" aria-current="page">Actualizar</li>
     <li class="breadcrumb-item text-capitalize" aria-current="page">{{object.nombre | truncatewords:"4"}}</li>
@@ -17,7 +17,7 @@
   <div class="container-fluid">
     <div class="row d-flex justify-content-between">
       <span><i class="fa fa-bars"></i> Formulario de Puestos Vacantes Publicados</span>
-      <a href="{% url 'Panel:PanelAreasCrear' %}" class="btn btn-light"><i class="fa fa-plus-circle"></i> Nuevo</a>
+      <a href="{% url 'Panel:AreasCrear' %}" class="btn btn-light"><i class="fa fa-plus-circle"></i> Nuevo</a>
     </div>
   </div>
 {% endblock card-header %}
@@ -64,13 +64,8 @@
     </div>
     <div class="form-group row">
       <div class="container d-flex justify-content-end">
-        <input type="submit" class="btn btn-primary btn-lg rounded-pill">
+        <button type="submit" class="btn btn-primary btn-lg border-primary"><i class="far fa-save"></i> Guardar Información</button>
       </div>
     </div>
   </form>
 {% endblock card-body %}
-
-{% block extrajs %}
-  <script type="text/javascript" src="{% static "ckeditor/ckeditor-init.js" %}"></script>
-  <script type="text/javascript" src="{% static "ckeditor/ckeditor/ckeditor.js" %}"></script>
-{% endblock extrajs %}
