--- a/Proyecto/DacodesJobs/templates/panel/index.html
+++ b/Proyecto/DacodesJobs/templates/panel/index.html
@@ -30,13 +30,13 @@
     <div class="d-flex" id="wrapper">
       <!-- Sidebar -->
       <div class="bg-dark" id="sidebar-wrapper">
-          {% include "partials/sidebar.html" %}
+          {% include "panel/partials/sidebar.html" %}
       </div>
       <!-- /#sidebar-wrapper -->
 
       <!-- Page Content -->
       <div id="page-content-wrapper">
-        {% include "partials/PanelNav.html" %}
+        {% include "panel/partials/Nav.html" %}
 
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
