--- a/Proyecto/DacodesJobs/templates/panel/AreasTrabajo/formulario.html
+++ b/Proyecto/DacodesJobs/templates/panel/AreasTrabajo/formulario.html
@@ -57,6 +57,12 @@
       </div>
     </div>
     <div class="form-group row">
+      <label for="text-input" class="col-lg-2 col-form-label">{{ form.descripcion.label }}</label>
+      <div class="col-lg-10">
+        {{ form.descripcion }}
+      </div>
+    </div>
+    <div class="form-group row">
       <label for="text-input" class="col-lg-2 col-form-label">{{ form.imagen_referencial.label }}</label>
       <div class="col-lg-10">
         {{ form.imagen_referencial }}
@@ -69,3 +75,7 @@
     </div>
   </form>
 {% endblock card-body %}
+{% block extrajs %}
+  <script type="text/javascript" src="{% static "ckeditor/ckeditor-init.js" %}"></script>
+  <script type="text/javascript" src="{% static "ckeditor/ckeditor/ckeditor.js" %}"></script>
+{% endblock extrajs %}
