--- a/Proyecto/DacodesJobs/templates/users/puestos.html
+++ b/Proyecto/DacodesJobs/templates/users/puestos.html
@@ -11,7 +11,7 @@
          {% csrf_token %}
         {{form.nombre}}
         <div class="input-group-append">
-          <button class="btn btn-sm btn-outline-primary" type="submit" id="button-addon2">Button</button>
+          <button class="btn btn-sm btn-outline-primary" type="submit" id="button-addon2"><i class="fa fa-search"></i></button>
         </div>
       </div>
     </form>
