--- a/Proyecto/DacodesJobs/templates/panel/partials/Nav.html
+++ b/Proyecto/DacodesJobs/templates/panel/partials/Nav.html
@@ -15,13 +15,13 @@
       <ul class="navbar-nav mr-auto">
         <div class="dropdown">
           <!-- <img src="{% static 'images/person_1.jpg' %}" class="img-fluid rounded-circle" width="50"> -->
-          <button class="btn btn-outline-secondary dropdown-toggle text-dark" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Usuario
-          </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="#">Opcion 1</a>
-            <a class="dropdown-item" href="#">Opcion 2</a>
-            <a class="dropdown-item" href="#">Opcion 3</a>
+          <a id="navbarDropdown" class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" v-pre>
+            {{ user.username }} <span class="caret"></span>
+          </a>
+
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="{% url 'logout' %}"> Logout
+            </a>
           </div>
         </div>
       </ul>
