--- a/Proyecto/DacodesJobs/templates/users/formulario_candidatos.html
+++ b/Proyecto/DacodesJobs/templates/users/formulario_candidatos.html
@@ -9,7 +9,7 @@
     <div class="col-md-12 mb-5">
       <div class="card">
         <div class="card-header">
-          <span><i class="fa fa-bars"></i> Formulario de Postulación</span>
+          <span><i class="fa fa-bars"></i> Formulario de Postulación a {{puesto.nombre | truncatewords:"5"}}</span>
         </div>
         <div class="card-body">
           {% if form.errors %}
@@ -34,7 +34,7 @@
             {% csrf_token %}
             <div class="form-group row">
               <div class="col-lg-10">
-                <input type="text" name="id_puesto" value="{{request.GET.get}}">
+                <input type="text" name="id_puesto" value="{{puesto.id}}" class="form-control sr-only" id="id_puesto">
               </div>
             </div>
             <div class="form-group row">
