--- a/Proyecto/DacodesJobs/templates/users/partials/Nav.html
+++ b/Proyecto/DacodesJobs/templates/users/partials/Nav.html
@@ -27,7 +27,7 @@
     <div class="my-2 my-lg-0">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'base:Index' %}"><i class="fas fa-user fa-2x"></i><span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="{% url 'Login' %}"><i class="fas fa-user fa-2x"></i><span class="sr-only">(current)</span></a>
         </li>
       </ul>
     </div>
